# invlib

./: .travis.yml  CMakeLists.txt  README.md  setup.py
benchmarks/: CMakeLists.txt  benchmark_types.h  matrix_vector_multiplication.cpp  mats.cpp  utility.h
cmake/: FindMKL.cmake
doc/: Doxyfile
examples/MATS/: CMakeLists.txt  eigen.h  eigen_io.h  eigen_mpi.h  oem.cpp  oem_mpi.cpp  oem_preconditioned.cpp  oem_preconditioned_mpi.cpp
ext/pugixml/: pugixml.cpp  pugixml.hpp
retrievals/: CMakeLists.txt
retrievals/MATS/: CMakeLists.txt  oem_mkl.cpp
src/: CMakeLists.txt  algebra.h  map.h
src/algebra/: Eigen.h  identity.h  lazy_evaluation.h  matrix.cpp  matrix.h  matrix_identity.cpp  matrix_identity.h  matrix_inverse.h  matrix_product.cpp  matrix_product.h  matrix_sum.cpp  matrix_sum.h  matrix_transpose.h  matrix_zero.h  precision_matrix.h  solver.h  solvers.h  transformation.h  vector.cpp  vector.h
src/archetypes/: matrix_archetype.cc  matrix_archetype.cpp  matrix_archetype.h  vector_archetype.cpp  vector_archetype.h
src/interfaces/: arts.h
src/invlib/: CMakeLists.txt  forward_models.h  invlib.h  io.h  log.h  map.cpp  map.h  mpi.h  traits.h
src/invlib/algebra/: matrix.cpp  matrix.h  matrix_difference.cpp  matrix_difference.h  matrix_identity.cpp  matrix_identity.h  matrix_inverse.cpp  matrix_inverse.h  matrix_product.cpp  matrix_product.h  matrix_sum.cpp  matrix_sum.h  matrix_transpose.cpp  matrix_transpose.h  matrix_zero.cpp  matrix_zero.h  precision_matrix.h  solvers.cpp  solvers.h  transformation.cpp  transformation.h  vector.cpp  vector.h
src/invlib/archetypes/: matrix_archetype.cpp  matrix_archetype.h  vector_archetype.cpp  vector_archetype.h
src/invlib/blas/: blas_generic.h  blas_matrix.h  blas_vector.cpp  blas_vector.h
src/invlib/cuda/: CMakeLists.txt  cublas_generic.h  cuda_allocator.cpp  cuda_allocator.h  cuda_device.cpp  cuda_device.h  cuda_sparse.cpp  cuda_sparse.h  cuda_vector.cpp  cuda_vector.h  kernels.cu  utility.h
src/invlib/dense/: vector_data.cpp  vector_data.h
src/invlib/interfaces/: CMakeLists.txt  arts_wrapper.cpp  arts_wrapper.h  eigen.h
src/invlib/interfaces/python/: CMakeLists.txt  general.h  invlib.cpp  python_forward_model.h  python_matrix.h  python_mpi.h  python_solver.h  python_vector.cpp  python_vector.h
src/invlib/interfaces/python/invlib/: __init__.py  api.py  forward_model.py  matrix.py  mkl.py  oem.py  optimizer.py  pointer.py  solver.py  vector.py
src/invlib/interfaces/python/invlib/api/: __init__.py  template
src/invlib/io/: readers.h  writers.h
src/invlib/mkl/: mkl_generic.h  mkl_sparse.cpp  mkl_sparse.h
src/invlib/mpi/: generic.h  log.h  mpi_matrix.cpp  mpi_matrix.h  mpi_vector.cpp  mpi_vector.h
src/invlib/optimization/: gauss_newton.cpp  gauss_newton.h  gradient_descent.cpp  gradient_descent.h  levenberg_marquardt.cpp  levenberg_marquardt.h  levenberg_marquardt_logger.h  line_search.h
src/invlib/profiling/: timer.cpp  timer.h  tracer.cpp  tracer.h
src/invlib/sparse/: sparse_base.cpp  sparse_base.h  sparse_data.cpp  sparse_data.h
src/invlib/types/: matrix_archetype.cpp  matrix_archetype.h  vector_archetype.cpp  vector_archetype.h
src/invlib/types/blas/: blas_generic.h  blas_matrix.h  blas_vector.h
src/invlib/types/cuda/: CMakeLists.txt  cublas_generic.h  cuda_allocator.h  cuda_vector.cpp  cusparse_generic.h  kernels.h  utility.h
src/invlib/types/dense/: matrix_data.h  vector_data.cpp  vector_data.h
src/invlib/types/mkl/: mkl_generic.h  mkl_sparse.cpp  mkl_sparse.h
src/invlib/types/mpi/: mpi_matrix.h  traits.h  utility.h
src/invlib/types/sparse/: sparse_data.cpp  sparse_data.h
src/invlib/utility/: array.h  array_deleter.h  functions.h  reference_wrapper.h  tuple.h
src/optimization/: gauss_newton.h  levenberg_marquardt.h  minimize.h
test/: CMakeLists.txt  run_all.cpp  test_types.h  utility.h
test/Eigen/: map.cc
test/algebra/: CMakeLists.txt  diagonal.cpp  identities.cc  identities.cpp  lazy_evaluation.cc  precision_matrix.cc  precision_matrix.cpp  solvers.cc  solvers.cpp  transformation.cc  transformation.cpp
test/backends/: CMakeLists.txt  backends.cpp
test/forward_models/: CMakeLists.txt  linear.cc  linear.cpp  linear.h  sphere.cc  sphere.cpp  sphere.h
test/io/: CMakeLists.txt  read_and_write.cpp
test/mpi/: CMakeLists.txt  conjugate_gradient.cpp  linear.cpp  mpi.cpp  mpi_reference.cpp
test/optimization/: CMakeLists.txt  exact.cc  exact.cpp  gauss_newton.cc  test_functions.cc  test_functions.cpp  test_functions.h
test/profiling/: CMakeLists.txt  trace.cpp
test/python/: CMakeLists.txt  test_matrix  test_matrix_arithmetic.py  test_oem  test_oem.py  test_solver  test_sparse_mkl_arithmetic.py  test_vector  test_vector_arithmetic.py
test/readers/: CMakeLists.txt  readers.cpp  writers.cpp
test/sparse/: CMakeLists.txt  sparse_base.cpp  sparse_data.cpp
